--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,9 @@ description: >-
   standards.
 url: "https://eips.ethereum.org"
 twitter_username: ethereum
-github_username:  ethereum
+github_username:  ethereum # not used, hardcoded in includes/social.html
+rss: /feed.xml # A feed for all of the EIPs, displayed in includes/social.html
+
 header_pages:
  - all.html
  - core.html
